--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,17 @@
       "vite/client",
       "@types/node",
     ],
-  }
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "esm": true,
+    "compilerOptions": {
+      "module": "NodeNext",
+      "moduleResolution": "NodeNext",
+      "esModuleInterop": true,
+      "allowImportingTsExtensions": true,
+    }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
