--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "scripts": {
     "dev": "vite -c vite.config.mts",
     "dev:worker": "bun run --hot ./src/cloudflare-workers/bun:test-server.ts",
-
+    "build": "vite build -c vite.config.mts",
     "build:client": "vite -c vite.config.mts build",
     "build:worker": "bun build src/cloudflare-workers/worker.ts --outfile dist/server/cloudflare-workers.js --minify",
-
-    "server": "node --loader ts-node/esm -r tsconfig-paths/register ./src/renderer/server.ts",
+    "server": "ts-node ./src/renderer/server.ts",
     "server:dev": "NODE_ENV=development npm run server",
     "server:prod": "NODE_ENV=production npm run server",
-
     "deploy:worker": "wrangler deploy",
     "deploy:pages": "wrangler pages deploy ./dist/client/",
-
-    "prerender": "PRERENDER=true vite build -c vite.config.mts"
+    "start": "npm run server:prod"
   },
   "dependencies": {
-    "@cloudflare/kv-asset-handler": "^0.3.0",
     "express": "^4.18.2",
     "itty-router": "^4.0.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.2",
     "vike": "^0.4.147",
     "wrangler": "^3.17.1"
   },
@@ -42,8 +41,6 @@
     "bun-types": "^1.0.14",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
     "vite": "^5.0.2"
   }
 }
