--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
       "tailwindcss": {}
     }
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231121.0",
     "@types/express": "^4.17.21",
