--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "itty-router": "^4.0.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "telefunc": "^0.1.64",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2",
@@ -31,7 +32,7 @@
     }
   },
   "engines": {
-    "node": ">=18.18.0 <19.0.0"
+    "node": "18.18.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231121.0",
